固定番号をメールアドレスに変更、列指定を数字からアルファベットに変更

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <span>携帯番号</span>
                 </label>
                 <label>
-                    <input type="checkbox" id="matchPhone">
-                    <span>固定番号</span>
+                    <input type="checkbox" id="matchEmail">
+                    <span>メールアドレス</span>
                 </label>
             </div>
             <div class="column-mapping" id="columnMapping" style="display: none;">
